citrus-admin-client/src/main/resources/static/app/css/main.css
/* ... */
/** Code editor **/

.code-editor {
    height: 800px;
}

pre {
    background-color: #ffffff;
}

pre.logger {
    height: 700px;
    overflow-y: auto;
    overflow-x: hidden;
    font-size: 12px;
}

/** Space placeholders */

.space-top-30 {
    margin-top: 30px;
}

/* Disable bootstrap icons as we use font-awesome icons */

[class^="icon-"],
[class*=" icon-"] {
    background-image: none;
}

.icon-white,
.nav-pills > .active > a > [class^="icon-"],
.nav-pills > .active > a > [class*=" icon-"],
.nav-list > .active > a > [class^="icon-"],
.nav-list > .active > a > [class*=" icon-"],
.navbar-inverse .nav > .active > a > [class^="icon-"],
.navbar-inverse .nav > .active > a > [class*=" icon-"],
.dropdown-menu > li > a:hover > [class^="icon-"],
.dropdown-menu > li > a:hover > [class*=" icon-"],
.dropdown-menu > .active > a > [class^="icon-"],
.dropdown-menu > .active > a > [class*=" icon-"],
.dropdown-submenu:hover > a > [class^="icon-"],
.dropdown-submenu:hover > a > [class*=" icon-"] {
    background-image: none;
}

/** Navigation **/

.navbar-brand {
    text-shadow: none;
}

.navbar-brand span {
    color: #ffffff;
}

.navbar-brand:hover span {
    color: #ffffff;
}

.navbar-brand img {
    float: left;
    margin-top: -2px;
    margin-right: 3px;
}

.navbar-default {
    background: #0096D6;
    border: none;
}

.navbar .nav > li > a {
    color: #ffffff;
    text-shadow: none;
}

.navbar .nav .active > a, .navbar .nav .active > a:hover, .navbar .nav .active > a:focus {
    color: #ffffff;
    background-color: rgba(255,255,255,0.2);
    -webkit-box-shadow: none;
    box-shadow: none;
}

.navbar .nav > li > a.router-link-active, .navbar .nav > li > a.router-link-active:hover, .navbar .nav > li > a.router-link-active:focus {
    color: #ffffff;
    background-color: rgba(255,255,255,0.2);
    -webkit-box-shadow: none;
    box-shadow: none;
}

.navbar .nav > li > a.active,
.navbar .nav > li > a:hover {
    color: #ffffff;
    background-color: rgba(255,255,255,0.2);
}

/** Tab navigation **/

.nav-tabs > li > a {
    color: #404040;
    background-color: #eff6fb;
    border: 1px solid #dddddd;
    padding-right: 25px;
    cursor: pointer;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
    color: #fff;
    background-color: #0096D6;
    border-color: #0096D6;
}

.nav-tabs > li > a:hover {
    color: #404040;
    background-color: #e3effc;
    border-color: #dddddd;
}

.nav-tabs > li > button.close {
    position: relative;
    top: -2px;
    z-index: 100;
    margin-right: 6px;
    font-weight: lighter;
}

.nav-tabs > li.active > button.close {
    color: #fff;
    opacity: .5;
    filter: alpha(opacity=50);
}

/** Nav Pills **/

.nav-pills > li + li {
    margin-left: 0px;
}

.nav-pills > li > a {
    background: #eff6fb;
    color: #333;
    text-align: center;
    margin: 1px;
}

.nav > li > a:hover,
.nav > li > a:focus {
    background: #e3effc;
}

.nav-pills > li.active > a,
.nav-pills > li.active > a:hover,
.nav-pills > li.active > a:focus {
    background: #0096D6;
    color: #fff;
}

.pills-bar {
    border-left: 1px solid #ddd;
    max-width: 470px;
    margin-top: 30px;
}

.pills-bar > li > a {
    padding: 3px 15px;
    border-top: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-radius: 0px;
    margin: 0px;
    background: #fefefe;
}

.pills-bar > li > a:hover {
    background-color: #efefef;
}

.pills-bar > li.active > a,
.pills-bar > li.active > a:hover,
.pills-bar > li.active > a:focus {
    background: #efefef;
    color: #333;
}

/** Container **/

.jumbotron {
    background-color: #eff6fb;
    padding-top: 20px;
    padding-bottom: 20px;
    margin-bottom: 5px;
}

.jumbotron p {
    font-size: 18px;
    margin-top: 25px;
}

.jumbotron .btn {
    font-size: 18px;
}

.content-header {
    padding-top: 15px;
    padding-bottom: 15px;
}

.content-header form {
    margin-top: 25px;
}

.content-nav {
    background-color: #eff6fb;
    padding-top: 10px;
    padding-left: 15px;
    padding-right: 15px;
    min-height: 45px;
    border-radius: 4px;
    margin-bottom: 35px;
}

.content {
    margin-top: 20px;
}

/** Buttons **/
.btn.disabled, .btn[disabled], fieldset[disabled] .btn {
    opacity: .85;
    background-color: #ccc;
    border-color: #ccc;
}

.btn-primary {
    color: #ffffff;
    border-color: #0096D6;
    background: #0096D6;
}

.btn-primary:hover {
    border-color: #33abde;
    background-color: #33abde;
}

.btn-citrus {
    color: #ffffff;
    text-shadow: none;
    background-color: #fcc300;
    background-image: -moz-linear-gradient(top , #fad011, #fcc300);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fad011), to(#fac300));
    background-image: -webkit-linear-gradient(top, #fad011, #fcc300);
    background-image: -o-linear-gradient(top, #fad011, #fcc300);
    background-image: linear-gradient(to bottom, #fad011, #fcc300);
    background-repeat: repeat-x;
    border-color: #fcc300 #fcc300 #fad011;
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffFBD06E', endColorstr='#ffF89406', GradientType=0);
    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
}

.btn-citrus:hover,
.btn-citrus:active,
.btn-citrus.active,
.btn-citrus.disabled,
.btn-citrus[disabled] {
    color: #ffffff;
    background-color: #fcc300;
    *background-color: #fad011;
}

.btn-citrus.active {
    color: rgba(255, 255, 255, 0.75);
}

.btn-citrus .caret {
    border-top-color: #ffffff;
    border-bottom-color: #ffffff;
}

/** Labels **/

.label, .badge {
    text-shadow: none;
    font-weight: normal;
}

.label-header, .badge-header {
    min-width: 350px;
    font-size: 30.5px;
}

.label-emphasis, .badge-emphasis {
    min-width: 20px;
    font-size: 15px;
    text-align: center;
}

.label-primary {
    background-color: #0096D6;
}
/* ... */

